# tango-scene-reconstructor

./: .gitignore  README.md  import-summary.txt  settings.gradle
Cloud2Mesh/app/: build.gradle  proguard-rules.pro
Cloud2Mesh/app/libs/: TangoUX_Turing_Java.aar
Cloud2Mesh/app/src/main/: AndroidManifest.xml
RGBPointCloudBuilder/: local.properties
RGBPointCloudBuilder/app/: build.gradle
RGBPointCloudBuilder/app/src/main/: AndroidManifest.xml
RGBPointCloudBuilder/app/src/main/jni/: Android.mk  Application.mk  camera_texture_drawable.cc  color_image.cc  conversion.cc  depth_image.cc  fabmap.cc  frame_to_frame_scan_matcher.cc  img_file_writer.cc  jni_interface.cc  loop_closure_detector.cc  mesh.cc  multiframe_scan_matcher.cc  nicp.cc  pcd.cc  pcd_container.cc  pcd_drawable.cc  pcd_file_reader.cc  pcd_file_writer.cc  pcd_outlier_removal.cc  pcd_worker.cc  point.cc  point_cloud.cc  point_cloud_container.cc  point_cloud_data.cc  point_cloud_reconstructor.cc  pose_container.cc  pose_data.cc  range_image.cc  rgb_depth_sync_application.cc  scan_matcher.cc  scene.cc  shader.cc  slam3d.cc  tango_scene_reconstructor_application.cc  (+6 more)
RGBPointCloudBuilder/gradle/wrapper/: gradle-wrapper.properties
TangoSceneReconstructor/app/src/main/: AndroidManifest.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
pcdFileReader/: CMakeLists.txt  mergePCL.cpp  pcdFileReader.cpp  pcdWithNDT.cpp  pclToMesh.cpp  test_pcd.pcd
pointCloudJava/: build.gradle
pointCloudJava/src/main/: AndroidManifest.xml
socket/: Client.java  Server.java
socketCommunication/: server.cpp
(+135 files in other folders)
